# cu-robotics-in-agriculture-research

./: LICENSE  README.md  app.py  pyproject.toml
data/: source.md
models/: readme.md
notebooks/evaluation/: 1_final_graph.py
notebooks/exploratory/: 01_explore.ipynb  01_explore.py  02_proper_explore.ipynb  02_proper_explore.py  03_new_explore_cli.py  04_process_data_WITH_LEAKAGE.py  04a_process_data-old.py  05_validate_processed_data.py  06_encode_data_WITH_LEAKAGE.py  07_preprocessor.py  11_prepare_base_dataset.py  12_preprocessor_sample.py
notebooks/training/: 01_explore_scikit_regressors.py  02_boosting_regressors.py  03a_hypertune_randomforest.py  03b_hyptertune_elestic_tree.py  03c_hyptertune_xgb.py  03d_hyptertune_catboost.py  04_top_models_trained.py  04b_rehypertune_and_evaluate.py  05a_train_final_xgboost.py  05b_train_final_extratrees.py  06_production_demo.py
results/: hypertuned_info.md
